--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,8 +9,8 @@
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
     android:theme="@style/AppTheme"
-    android:requestLegacyExternalStorage="true"
-    android:usesCleartextTraffic="true">
+    android:usesCleartextTraffic="true"
+    android:requestLegacyExternalStorage="true">
         <activity 
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|smallestScreenSize|screenLayout|uiMode|navigation" 
             android:exported="true" 
@@ -28,30 +28,23 @@
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
-                <category npm update
-                :name="android.intent.category.BROWSABLE" />
-                
-                <!-- Handle file scheme URIs -->
-                <data android:scheme="file" android:host="*"/>
-
-                <!-- Handle content scheme URIs -->
-                <data android:scheme="content" android:host="*"/>
-                
-                <!-- Handle specific MIME types for GPX files -->
+                <category android:name="android.intent.category.BROWSABLE" />
                 <data android:mimeType="application/gpx+xml" />
-                <data android:mimeType="application/xml" />
-                <data android:mimeType="text/xml" />
                 <data android:mimeType="application/octet-stream" />
-                
-                <!-- Handle file paths for GPX files -->
+                <data android:scheme="file" />
+                <data android:scheme="content" />
                 <data android:pathPattern=".*\\.gpx" />
-                <data android:pathPattern=".*\\.GPX" /> <!-- Case sensitivity -->
             </intent-filter>
 
         </activity>
-        <provider android:authorities="${applicationId}.fileprovider" android:exported="false" android:grantUriPermissions="true" android:name="androidx.core.content.FileProvider">
+        <provider
+            android:authorities="${applicationId}.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true"
+            android:name="androidx.core.content.FileProvider">
             <meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/file_paths" />
         </provider>
+
         <receiver android:name="io.capawesome.capacitorjs.plugins.foregroundservice.NotificationActionBroadcastReceiver" />
         <service 
             android:name="io.capawesome.capacitorjs.plugins.foregroundservice.AndroidForegroundService" 
@@ -72,4 +65,5 @@
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
      <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
     <uses-feature android:name="android.hardware.location.gps" />
+
 </manifest>
