--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "@capawesome/capacitor-background-task": "^7.0.1",
     "@ionic/angular": "^8.6.3",
     "@ionic/storage-angular": "^4.0.0",
+    "@ngx-translate/core": "^16.0.4",
+    "@ngx-translate/http-loader": "^16.0.1",
     "dompurify": "^3.2.6",
-    "ionicons": "^8.0.11",
+    "ionicons": "^7.4.0",
     "lodash": "^4.17.21",
     "ol": "^10.4.0",
     "pako": "^2.1.0",
@@ -51,8 +53,10 @@
     "@angular/cli": "^20.0.5",
     "@angular/compiler": "^20.0.6",
     "@angular/compiler-cli": "^20.0.6",
+    "@capacitor/assets": "^3.0.5",
     "@capacitor/cli": "^7.0.0",
     "@ionic/angular-toolkit": "^12.2.0",
+    "@types/angular": "^1.8.9",
     "@types/dompurify": "^3.0.5",
     "@types/jasmine": "^5.1.4",
     "@types/lodash": "^4.17.17",
