--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@ngx-translate/core": "^16.0.4",
     "@ngx-translate/http-loader": "^16.0.1",
     "dompurify": "^3.2.6",
+    "html2canvas": "^1.4.1",
     "ionicons": "^7.4.0",
     "lodash": "^4.17.21",
     "ol": "^10.4.0",
