--- a/angular.json
+++ b/angular.json
@@ -36,7 +36,11 @@
                 "output": "./svg"
               }
             ],
-            "styles": ["src/theme/variables.scss", "src/global.scss"],
+            "styles": [
+              "src/theme/variables.scss",
+              "src/global.scss",
+              "node_modules/ol/ol.css"
+            ],
             "scripts": []
           },
           "configurations": {
@@ -113,7 +117,11 @@
                 "output": "./svg"
               }
             ],
-            "styles": ["src/theme/variables.scss", "src/global.scss"],
+            "styles": [
+              "src/theme/variables.scss",
+              "src/global.scss",
+              "node_modules/ol/ol.css"
+            ],
             "scripts": []
           },
           "configurations": {
