--- a/package.json
+++ b/package.json
@@ -37,10 +37,11 @@
     "@ngx-translate/core": "^16.0.4",
     "@ngx-translate/http-loader": "^16.0.1",
     "dompurify": "^3.2.6",
+    "html-to-image": "^1.11.13",
     "html2canvas": "^1.4.1",
     "ionicons": "^7.4.0",
     "lodash": "^4.17.21",
-    "ol": "^10.4.0",
+    "ol": "^10.6.1",
     "pako": "^2.1.0",
     "swiper": "^11.1.1",
     "tslib": "^2.3.0",
