--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "^20.0.6",
     "@angular/platform-browser-dynamic": "^20.0.6",
     "@angular/router": "^20.0.6",
+    "@awesome-cordova-plugins/file-path": "^8.1.0",
+    "@awesome-cordova-plugins/social-sharing": "^8.1.0",
     "@capacitor-community/background-geolocation": "^1.2.17",
     "@capacitor-community/sqlite": "^7.0.0",
     "@capacitor/android": "^7.0.0",
@@ -36,7 +38,10 @@
     "@ionic/storage-angular": "^4.0.0",
     "@ngx-translate/core": "^16.0.4",
     "@ngx-translate/http-loader": "^16.0.1",
+    "cordova-plugin-filepath": "^1.6.0",
+    "cordova-plugin-x-socialsharing": "^6.0.4",
     "dompurify": "^3.2.6",
+    "es6-promise-plugin": "^4.2.2",
     "html-to-image": "^1.11.13",
     "html2canvas": "^1.4.1",
     "ionicons": "^7.4.0",
