--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@awesome-cordova-plugins/file-path": "^8.1.0",
     "@awesome-cordova-plugins/social-sharing": "^8.1.0",
     "@capacitor-community/background-geolocation": "^1.2.17",
+    "@capacitor-community/speech-recognition": "^7.0.1",
     "@capacitor-community/sqlite": "^7.0.0",
     "@capacitor/android": "^7.0.0",
     "@capacitor/app": "^7.0.0",
