--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@ionic/storage-angular": "^4.0.0",
     "@ngx-translate/core": "^16.0.4",
     "@ngx-translate/http-loader": "^16.0.1",
+    "@supabase/supabase-js": "^2.81.1",
     "cordova-plugin-file": "^8.1.3",
     "cordova-plugin-filepath": "^1.6.0",
     "cordova-plugin-x-socialsharing": "^6.0.4",
