--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -22,4 +22,4 @@ org.gradle.jvmargs=-Xmx1536m
 android.useAndroidX=true
 
 androidxAppCompatVersion=1.6.1
-org.gradle.java.home=C:/Program Files/Java/jdk-17
+org.gradle.java.home=C:/Program Files/Eclipse Adoptium/jdk-17.0.17.10-hotspot
