--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"  package="io.elgros.paso"> 
-
+<?xml version="1.0" encoding="utf-8" ?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="io.elgros.paso">
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -8,7 +7,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|smallestScreenSize|screenLayout|uiMode|navigation"
             android:name="io.elgros.paso.MainActivity"
@@ -16,7 +14,6 @@
             android:theme="@style/AppTheme.NoActionBarLaunch"
             android:launchMode="singleTask"
             android:exported="true">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -27,19 +24,19 @@
                 <action android:name="android.intent.action.SEND" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                
+
                 <data android:scheme="content" />
                 <data android:scheme="file" />
 
                 <data android:mimeType="application/gpx+xml" />
-                <data android:mimeType="application/octet-stream" /> <data android:pathSuffix=".gpx" />
+                <data android:mimeType="application/octet-stream" />
+                <data android:pathSuffix=".gpx" />
 
                 <data android:mimeType="application/vnd.google-earth.kml+xml" />
                 <data android:mimeType="application/vnd.google-earth.kmz" />
                 <data android:pathSuffix=".kml" />
                 <data android:pathSuffix=".kmz" />
             </intent-filter>
-
         </activity>
 
         <provider
@@ -47,20 +44,20 @@
             android:authorities="${applicationId}.fileprovider"
             android:exported="false"
             android:grantUriPermissions="true">
-            <meta-data
-                android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_paths"></meta-data>
+            <meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/file_paths" />
         </provider>
         <service
             android:name="io.elgros.paso.MyForegroundService"
             android:foregroundServiceType="location|dataSync"
             android:enabled="true"
-            android:exported="false" /> 
-         <service
+            android:exported="false"
+        />
+        <service
             android:name="io.elgros.paso.PasoService"
             android:foregroundServiceType="location|dataSync"
             android:enabled="true"
-            android:exported="false" />   
+            android:exported="false"
+        />
     </application>
 
     <!-- Permissions -->
@@ -82,5 +79,4 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
     <uses-permission android:name="android.permission.VIBRATE" />
-
 </manifest>
